Project updated to using: Webpack 4 Preact 10 Typescript ESLint

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -1,7 +1,7 @@
 .button {
 	border: 0;
 	border-radius: 0.25em;
-	background: $secondary;
+	background: var(--secondary-color);
 	color: #fff;
 	font-size: 1.5rem;
 	white-space: nowrap;
