--- a/src/styles/config/vars.scss
+++ b/src/styles/config/vars.scss
@@ -1,5 +1,7 @@
-$black: #2b2024;
-$bg-color: #fbf9fa;
-$primary: #6900ff;
-$secondary: #9951ff;
-$accent: #ffd700;
+:root {
+	--black: #2b2024;
+	--bg-color: #fbf9fa;
+	--primary-color: #6900ff;
+	--secondary-color: #9951ff;
+	--accent-color: #ffd700;
+}
