--- a/src/styles/base/doc.scss
+++ b/src/styles/base/doc.scss
@@ -11,8 +11,8 @@
 }
 
 body {
-	color: $black;
-	background: $bg-color;
+	color: var(--black);
+	background: var(--bg-color);
 	font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
 	@extend %fullscreen;
 	font-weight: 400;
