added timer functionality updated styles service worker migrated to typescript

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,7 +1,7 @@
 .header {
 	height: 50px;
 	width: 100%;
-	padding: 0;
+	padding: 32px 0;
 	background: var(--primary-color);
 	@extend %flex-center;
 
