--- a/src/styles/config/vars.scss
+++ b/src/styles/config/vars.scss
@@ -2,6 +2,6 @@
 	--black: #2b2024;
 	--bg-color: #fbf9fa;
 	--primary-color: #6900ff;
-	--secondary-color: #9951ff;
+	--secondary-color: #7028d6;
 	--accent-color: #ffd700;
 }
